# nc_visual_cli

./: .gitignore  CONTRIBUTING.md  DESIGN_CONTRACT.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: tests.yml
demo_data/: assets.example.csv  events.example.csv  fused_3d_observation_compact_1h_uvfixed.nc
packaging/: launcher.py  nc_visual_cli.spec
scripts/: build_offline_environment.py  build_release.py
src/nc_visual_cli/: __init__.py  cli.py  errors.py  models.py  offline_report.py  provenance.py  report_contract.py  scanner.py  service.py  wind_analysis.py
src/nc_visual_cli/templates/: report.html
tests/: conftest.py  test_analysis_contract.py  test_real_demo.py  test_scanner_provenance.py  test_service_cli.py  test_wind_analysis.py
