[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nc-visual-cli"
version = "2.0.0"
description = "Offline wind-field situation report generator for emergency command"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "nc_visual_cli contributors" }]
dependencies = [
  "jinja2>=3.1,<4",
  "netCDF4>=1.7.4,<1.8",
  "numpy>=2.3,<2.4",
  "tzdata>=2025.2",
  "xarray>=2025.1",
]

[project.urls]
Homepage = "https://github.com/maomao3334/nc_visual_cli"
Repository = "https://github.com/maomao3334/nc_visual_cli"
Issues = "https://github.com/maomao3334/nc_visual_cli/issues"

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.10,<7",
  "pytest>=8.3,<9",
]

[project.scripts]
nc_visual_cli = "nc_visual_cli.cli:entrypoint"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nc_visual_cli = ["templates/*.html", "assets/*.geojson"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = ["integration: exercises the bundled real NetCDF sample"]
filterwarnings = [
  "ignore:numpy.ndarray size changed, may indicate binary incompatibility\\. Expected 16 from C header, got 96 from PyObject:RuntimeWarning",
]
